<resources>
    <string name="app_name">DrinkingTab</string>
    <string name="list_heading">List</string>
    <string name="settings_heading">Manage</string>

    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="drinks_label">Products</string>
    <string name="customers_label">Customers</string>
    <string name="event_label">Event</string>
    <string name="events_label">Events:</string>
    <string name="create_drink_label">Create Drink</string>
    <string name="create_customer_label">Create customer</string>
    <string name="create_event_label">Create event</string>
    <string name="edit_icon" translatable="false">Edit icon</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="continueText">Continue</string>
    <string name="create_event">Create event</string>
    <string name="edit_title">Edit</string>
    <string name="label_for_the_edittext" translatable="false">Label for the EditText</string>
    <string name="create_title">Create</string>
    <string name="drink_tag" translatable="false">DRINK</string>
    <string name="customer_tag" translatable="false">CUSTOMER</string>
    <string name="event_tag" translatable="false">EVENT</string>

    <string name="welcome_message_title">\"Put it on my tab!\"</string>
    <string name="no_events_message">Some data is missing.\nCreate products, customers and events under the \"Manage\" tab.</string>
    <string name="welcome_message">Welcome to the DrinkingTab, a virtual tab to track your customers orders and put them on a digital tab.\n\nCreate events, add your drinks &amp; customers and easily keep track of your earning for the night.\n\nIdeal for clubs, teams und social gatherings!</string>
    <string name="create_event_message">Create your first event now!</string>

    <!-- Editable names -->
    <string name="name">Name</string>
    <string name="identifier">Name</string>
    <string name="date">Date</string>
    <string name="price">Price (Cent)</string>
    <string name="chosen_event_label">Chosen</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="add">Add</string>
    <string name="error_fill_fields">Please fill out every field</string>

    <string name="confirm_pay_title">Confirm payment</string>
    <string name="confirm_pay_message">Did the customer pay the full amount?\nContinuing will reset the orders to 0.</string>

    <!-- Confirm deletion dialog -->
    <string name="confirm_title">Confirm deletion</string>
    <string name="confirm_message">Are you sure that you want to delete this item?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="add_drinks_label">Add\ndrinks</string>
    <string name="pay_button">Pay</string>

</resources>
